--- a/app/Tpl/fanwe/css/mobile_style.css
+++ b/app/Tpl/fanwe/css/mobile_style.css
@@ -195,7 +195,7 @@ html[xmlns] .slides { display: block; }
 }
 
 /**/
-.activitielist{ background:url(activitielist.gif) repeat-y 31px 0;}
+.activitielist{ background:url(../images/activitielist.gif) repeat-y 31px 0;}
 .cis_activitielist{ width:100%;}
 .cis_activitielist div.cover{ height:80px; width:80px; display:table-cell; line-height:80px; vertical-align:middle; float:left; margin-right:10px; }
 .cis_activitielist div.cover img{ max-width:80px; max-height:80px; width:expression(this.width > 80 && this.width > this.height ? 80: true); height:expression(this.height > 80 ? 80: 80); vertical-align:middle;}
@@ -425,3 +425,203 @@ html[xmlns] .slides { display: block; }
 .footer ul{display:none;}
 
 
+
+
+
+/**** copy from zhihu ****/
+  .top .inner-wrapper, .bottom .inner-wrapper {
+    width: auto;
+  }
+  .top .inner-wrapper, .bottom .inner-wrapper {
+    position: relative;
+    /*width: 740px;*/
+    margin: 0 auto;
+  }
+  .top {
+    color: #fff;
+    background: #0078d8;
+    box-shadow: inset 0 -1px 6px rgba(0,0,0,.1);
+  }
+.top .form-wrapper {
+  min-height: initial;
+  margin: 0 auto;
+  padding: 42px 0 30px;
+  width: auto;
+}
+.top .form-wrapper {
+  position: relative;
+  width: 70%;
+  height: auto;
+  min-height: 360px;
+}
+.sign-flow .view .signin-switch {
+  float: right;
+}
+.top a {
+  color: #fff;
+}
+.sign-flow .view .input-wrapper, .sign-flow .view .button-wrapper, .sign-flow .view .signin-misc-wrapper, .sign-flow .view .weibo-signup-wrapper {
+  margin-top: 22px;
+}
+.sign-flow .view .input-wrapper {
+  position: relative;
+}
+.sign-flow .view .input-wrapper input {
+  width: 226px;
+  font-size: 16px;
+  line-height: 19px;
+}
+.sign-flow .view .input-wrapper input {
+  margin: 0;
+  padding: 8px 10px;
+  width: 100%;
+  background: #e7f1f8;
+  font-size: 15px;
+  line-height: 17px;
+  color: #555;
+  border: 1px solid #1672B9;
+  border-radius: 5px;
+  box-shadow: inset 0 1px 2px rgba(15,82,135,.25),0 1px 0 rgba(255,255,255,.15);
+}
+.sign-button {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 37px;
+}
+.sign-button {
+  display: block;
+  padding: 0;
+  width: 100%;
+  font-size: 15px;
+  line-height: 33px;
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 1px 1px rgba(0,0,0,.2);
+  background: #80C3F7;
+  background: -webkit-gradient(linear,left top,left bottom,from(#80c3f7),to(#6bbaf8));
+  border: 1px solid #1D80CF;
+  border-radius: 5px;
+  box-shadow: inset 0 1px 0 rgba(255,255,255,.3),0 1px 1px rgba(50,50,50,.05);
+  outline: 0;
+  cursor: pointer;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
+/**** copy from weibo ***/
+.item-info-page {
+  border-color: #e3e3e3;
+  background: #e7f1f8;
+  margin-top:22px;
+  border-radius: 5px;
+  box-shadow: inset 0 1px 2px rgba(15,82,135,.25),0 1px 0 rgba(255,255,255,.15);
+}
+.item-info-page {
+  overflow: hidden;
+  border-bottom: #dadada solid 1px;
+  padding: 9px 5px 9px 0;
+}
+.item-info-page span {
+  color: #333;
+  font-size: 15px;
+  font-weight: 400;
+  color: #a9a9a9;
+  line-height: 15px;
+}
+.item-info-page>span, .item-info-page a>span {
+  float: left;
+  margin: 0 0 0 15px;
+  /*width: 75px;*/
+  font-weight: 700;
+  font-size: 15px;
+  font-weight: 400;
+  color: #a9a9a9;
+  line-height: 15px;
+}
+.item-info-page>p, .item-info-page a>p, .item-info-page>div, .item-info-page a>div {
+  margin: 0 0 0 90px;
+}
+#E_birthday{
+  margin: 0 0 0 60px !important;
+}
+.L-tab, .L-tab-arrow, .L-tab-line {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.item-info-page .L-item-tab {
+  text-align: left;
+}
+.tit-info-page, .item-info-page span {
+  color: #333;
+  font-size: 15px;
+  font-weight: 400;
+  color: #a9a9a9;
+  line-height: 15px;
+}
+.L-select {
+  position: relative;
+  padding: 0 10px 0 0;
+}
+.L-item-tab {
+  position: relative;
+  display: block;
+  width: auto;
+  text-align: center;
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -ms-flex: 1 0 auto;
+  box-flex: 1;
+  flex: 1 0 auto;
+}
+.L-list-select {
+  position: absolute;
+  z-index: 99;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  -webkit-appearance: none;
+}
+.L-tab select, input[type="color" i][list] {
+                                      background-color: rgb(248, 248, 248);
+                                      border: 1px solid rgb(166, 166, 166);
+                                      border-image-source: initial;
+                                      border-image-slice: initial;
+                                      border-image-width: initial;
+                                      border-image-outset: initial;
+                                      border-image-repeat: initial;
+                                    }
+.L-tab option {
+  font-weight: normal;
+  display: block;
+  padding: 0px 2px 1px;
+  white-space: pre;
+  min-height: 1.2em;
+}
+.item-info-page .L-selected-select {
+  line-height: 1em;
+}
+.tit-info-page, .item-info-page span {
+  color: #333;
+  font-size: 15px;
+  font-weight: 400;
+  color: #a9a9a9;
+  line-height: 15px;
+}
+.L-selected-select {
+  position: relative;
+  top: 0;
+  overflow: hidden;
+  display: inline-block;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 100%;
+  padding: 0 10px 0 0;
+}
