--- a/app/Tpl/fanwe/css/reset.css
+++ b/app/Tpl/fanwe/css/reset.css
@@ -62,9 +62,9 @@ audio:not([controls]) {
  */
 
 html {
-    font-family: sans-serif; /* 1 */
-    -ms-text-size-adjust: 100%; /* 2 */
-    -webkit-text-size-adjust: 100%; /* 2 */
+    /*font-family: sans-serif; /* 1 */
+    /*-ms-text-size-adjust: 100%; /* 2 */
+    /*-webkit-text-size-adjust: 100%; /* 2 */
 }
 
 /**
@@ -106,8 +106,8 @@ a:hover {
  */
 
 h1 {
-    font-size: 2em;
-    margin: 0.67em 0;
+    /*font-size: 2em;
+    margin: 0.67em 0;*/
 }
 
 /**
@@ -124,7 +124,7 @@ abbr[title] {
 
 b,
 strong {
-    font-weight: bold;
+    /*font-weight: bold;*/
 }
 
 /**
@@ -132,7 +132,7 @@ strong {
  */
 
 dfn {
-    font-style: italic;
+    /*font-style: italic;*/
 }
 
 /**
@@ -157,14 +157,14 @@ mark {
 /**
  * Correct font family set oddly in Safari 5 and Chrome.
  */
-
+/*
 code,
 kbd,
 pre,
 samp {
     font-family: monospace, serif;
     font-size: 1em;
-}
+}*/
 
 /**
  * Improve readability of pre-formatted text in all browsers.
@@ -186,21 +186,21 @@ q {
  * Address inconsistent and variable font size in all browsers.
  */
 
-small {
+/*small {
     font-size: 80%;
-}
+}*/
 
 /**
  * Prevent `sub` and `sup` affecting `line-height` in all browsers.
  */
 
-sub,
+/*sub,
 sup {
     font-size: 75%;
     line-height: 0;
     position: relative;
     vertical-align: baseline;
-}
+}*/
 
 sup {
     top: -0.5em;
@@ -271,14 +271,14 @@ legend {
  * 2. Correct font size not being inherited in all browsers.
  * 3. Address margins set differently in Firefox 4+, Safari 5, and Chrome.
  */
-
+/*
 button,
 input,
 select,
 textarea {
     font-family: inherit; /* 1 */
-    font-size: 100%; /* 2 */
-    margin: 0; /* 3 */
+    /*font-size: 100%; /* 2 */
+    /*margin: 0; /* 3 */
 }
 
 /**
