--- a/app/Tpl/fanwe/css/style.css
+++ b/app/Tpl/fanwe/css/style.css
@@ -116,9 +116,9 @@ a:hover{ color:#6aafe2; text-decoration:underline; }
 .pages .current{  display:inline-block; padding:0px 5px; height:22px; line-height:22px;  color:#fff; background:#FF3413;border:1px solid #FF3413}
 #data_page_tuan .current{ background:url(../images/page.png) no-repeat -78px 0; padding:0px 5px; width:5px; height:15px; line-height:50px;  color:#fff; border:0;}
 #data_page_tuan .linkPage{ background:url(../images/page.png) no-repeat -58px 0; padding:0px; width:15px; height:15px; line-height:50px;  color:#fff; border:0;}
-#data_page_tuan .upPage{ background:url(../images/page.png) no-repeat -40px 0; padding:0px; width:15px; width:15px; height:15px; line-height:50px;  color:#fff; border:0;}
+#data_page_tuan .upPage{ background:url(../images/page.png) no-repeat -40px 0; padding:0px; width:15px; position:absolute; left:30px; height:15px; line-height:50px;  color:#fff; border:0;}
 #data_page_tuan .nextPage{ background:url(../images/page.png) no-repeat -20px 0; padding:0px; width:15px; height:15px; line-height:50px;  color:#fff; border:0;}
-#data_page_tuan .downPage{ background:url(../images/page.png) no-repeat -96px 0; padding:0px; width:15px; height:15px; line-height:50px;  color:#fff; border:0;}
+#data_page_tuan .downPage{ background:url(../images/page.png) no-repeat -96px 0; padding:0px; width:15px; position:absolute; right:30px; height:15px; line-height:50px;  color:#fff; border:0;}
 #data_page_tuan .prePage{ background:url(../images/page.png) no-repeat 0 0; padding:0px; width:15px; height:15px; line-height:50px;  color:#fff; border:0;}
 #data_page_tuan .theFirst,#data_page_tuan .theEnd,#data_page_tuan .nextPage,#data_page_tuan .prePage{ display:none;}
 
