--- a/app/Tpl/fanwe/css/mobile_style.css
+++ b/app/Tpl/fanwe/css/mobile_style.css
@@ -907,3 +907,419 @@ html[xmlns] .slides { display: block; }
   display: box;
   display: -webkit-box;
 }
+.ios-dialog {width:100%;height:100%;position:fixed;top:0;left:0;z-index:1000;}
+.ios-dialog-overlay {width:100%;height:100%;position:absolute;top:0;left:0;z-index:1;background-color:#000;opacity:.7;filter:alpha(opacity:70);}
+.ios-dialog-box {width:80%;position:absolute;top:50%;left:50%;margin:-80px 0 0 -40%;z-index:2;background-color:#fff;border-radius:5px;text-align:center;}
+.ios-dialog-detail {padding:30px 20px;font-size:16px;line-height:1.5;}
+.ios-dialog-opera {width:100%;height:50px;box-shadow:0 1px 1px -1px #888 inset;}
+.ios-dialog-btn {height:50px;border:none;background:none;color:#157efb;font-size:15px;line-height:50px;cursor:pointer;}
+.ios-dialog-btn-close {width:100%;}
+.ios-dialog-btn-cancel, .ios-dialog-btn-ok {width:50%;float:left;}
+.ios-dialog-btn-ok {box-shadow:-1px 0 1px -1px #888;}
+.ios-prompt {max-width:50%;position:fixed;top:45%;left:50%;z-index:1000;padding:15px 20px;background-color:rgba(0,0,0,.8);color:#fff;border-radius:5px;line-height:1.4;font-size:14px;transition:opacity .5s;}
+.pd_product-title-box {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  -webkit-box-orient: vertical;
+  box-orient: vertical;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-pack: center;
+  -webkit-box-pack: center;
+  box-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  margin: 0 10px;
+  padding-top: 8px;
+}
+.pd_product-title {
+  line-height: 20px;
+  font-size: 1.4rem;
+  color: #333;
+  font-weight: normal;
+  text-align: justify;
+}
+.pd_product-subtitle {
+  height: 30px;
+  line-height: 26px;
+  font-size: 1.2rem;
+  font-weight: normal;
+  color: #999;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.pd_product-price {
+  line-height: 20px;
+  margin: 0 10px 8px;
+}
+.pd_product-price-tag {
+  display: inline-block;
+  height: 18px;
+  line-height: 18px;
+  margin-right: 5px;
+  padding: 0 5px;
+  color: #f00;
+  border: 1px solid #ffc4bd;
+  vertical-align: middle;
+  -webkit-border-radius: 9px;
+  border-radius: 9px;
+  background-color: #fff;
+}
+.pd_product-price-num {
+  color: #fe5955;
+  vertical-align: -5px;
+  font-size: 2rem;
+}
+.pd_landing-page {
+  height: 44px;
+  line-height: 44px;
+  margin-left: 10px;
+  border-top: 1px solid #d8d8d8;
+  color: #999;
+}
+.pd_product-price-decimal {
+  color: #fe5955;
+  vertical-align: -4px;
+  font-size: 1.6rem;
+}
+.pd_landing-page .icon {
+  display: inline-block;
+  width: 20px;
+  height: 44px;
+  line-height: 44px;
+  font-size: 2rem;
+  text-align: center;
+  vertical-align: top;
+}
+.pd_favorable-comment {
+  position: relative;
+  display: block;
+  height: 44px;
+  line-height: 44px;
+  margin-left: 10px;
+  border-top: 1px solid #d8d8d8;
+  background-color: #fcfcfc;
+}
+.pd_favorable-comment .item {
+  float: left;
+  margin-right: 20px;
+  color: #666;
+}
+.pd_favorable-comment .icon_arrow {
+  display: inline-block;
+  width: 26px;
+  height: 26px;
+  line-height: 26px;
+  font-size: 1.9rem;
+  color: #bfbfbf;
+  text-align: center;
+  font-weight: bold;
+  position: absolute;
+  right: 0;
+  top: 8px;
+}
+.pd_brand-search, .pd_multiple-business {
+  height: 44px;
+  margin: 10px 0;
+  border-top: 1px solid #d8d8d8;
+  border-bottom: 1px solid #d8d8d8;
+  background-color: #fff;
+}
+.pd_brand-search a, .pd_multiple-business a {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+  -webkit-box-align: center;
+  box-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  height: 44px;
+  padding-left: 10px;
+}
+.pd_brand-search a img, .pd_multiple-business a img {
+  display: block;
+  height: 30px;
+  margin-right: 10px;
+}
+.pd_brand-search a .text, .pd_multiple-business a .text {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  display: block;
+  color: #999;
+  text-align: right;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.pd_brand-search a .text em, .pd_multiple-business a .text em {
+  color: #333;
+  font-style: normal;
+}
+.pd_brand-search a .icon_arrow, .pd_multiple-business a .icon_arrow {
+  display: inline-block;
+  width: 26px;
+  height: 26px;
+  line-height: 26px;
+  font-size: 1.9rem;
+  color: #bfbfbf;
+  text-align: center;
+  font-weight: bold;
+}
+.pd_product-recommend {
+  margin: 10px 0;
+  border-top: 1px solid #e0e0e0;
+  border-bottom: 1px solid #e0e0e0;
+  background-color: #fff;
+}
+.pd_detail-tab {
+  height: 46px;
+  margin-top: 10px;
+}
+.pd_detail-tab .tab {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 44px;
+  border-top: 1px solid #d8d8d8;
+  border-bottom: 1px solid #d8d8d8;
+  background-color: #fff;
+}
+.pd_detail-tab .tab .item.cur {
+  color: #ff3c25;
+}
+.pd_detail-tab .tab .item {
+  display: block;
+  position: relative;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  height: 44px;
+  line-height: 44px;
+  color: #333;
+  font-size: 1.4rem;
+  text-align: center;
+}
+.pd_box-border {
+  border-bottom: 1px solid #d8d8d8;
+  margin-bottom: 10px;
+  background-color: #fff;
+}
+.pd_box-border .comment .sub_nav{
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 44px;
+  border-bottom: 1px solid #ffabab;
+  background-color: #f5f5f5;
+}
+.pd_box-border .comment .sub_nav a{
+  display: block;
+  line-height: 32px;
+  font-size: 1.4rem;
+}
+.pd_box-border .comment .sub_nav > span.act {
+  height: 38px;
+  color: #ff3c3c;
+  border-bottom: 3px solid #ff3c3c;
+}
+.pd_box-border .comment .sub_nav > span {
+  display: block;
+  position: relative;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  width: 100%;
+  width: 25%;
+  height: 40px;
+  overflow: hidden;
+  padding-top: 4px;
+  text-align: center;
+  color: #999;
+  text-shadow: 0 1px 0 #fff;
+}
+.pd_box-border .goods_comment_box {
+  font-size: 1.4em;
+  text-align: center;
+}
+.pd_box-border .goods_comment_box a {
+  display: inline-block;
+  width: 60px;
+  font-weight: bold;
+  color: #ff3c3c;
+}
+.pd_box-border .msg_btn {
+  width: 100%;
+  display: block;
+  text-align: center;
+  color: #fff;
+  height: 38px;
+  line-height: 38px;
+  font-size: 16px;
+  border-radius: 4px;
+  box-shadow: 0 0 1px #d13600;
+  -webkit-box-shadow: 0 0 1px #d13600;
+  background: -webkit-gradient(linear,center bottom,center top,from(#f50),to(#ff4300));
+  border: 0;
+  margin-top:10px;
+}
+.pd_box-border #consult-add-form{
+  padding:10px;
+}
+.pd_box-border textarea{
+  width: 100%;
+  height: 62px;
+  line-height: 18px;
+  padding-top: 6px;
+  padding-left: 0!important;
+  border: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  color: #333;
+  font-size: 14px;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-appearance: none;
+  border: 0;
+  border-radius: 0;
+  width: 100% !important;
+}
+.pd_box-border .goods_comment_box .form_face {display:none !important;}
+.pd_box-border select[name='point'] {display:block;    width: 100%;
+  border: 0;
+  text-align: center;
+  margin-top: 2px;
+  margin-bottom: 2px;}
+.pd_box-border .goods_comment_row {
+  margin-top: 4px;
+  border-bottom: 1px solid #e5e5e5;
+  padding-bottom: 4px;
+}
+.pd_product-buy-num.show {
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}
+
+.pd_product-buy-num {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  z-index: 170;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+  -webkit-box-align: center;
+  box-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  width: 100%;
+  height: 45px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0 10px;
+  border-top: 1px solid #ffb1b1;
+  background-color: #fff;
+  -webkit-transform: translate3d(0,100%,0);
+  transform: translate3d(0,100%,0);
+  -webkit-transition: 300ms;
+  transition: 300ms;
+}
+.pd_product-num-wrap {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 30px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.pd_product-num-minus {
+  border: 1px solid #ddd;
+  border-right: none;
+  -webkit-border-radius: 5px 0 0 5px;
+  border-radius: 5px 0 0 5px;
+}
+.pd_product-num-minus, .pd_product-num-plus {
+  position: relative;
+  display: block;
+  width: 28px;
+  height: 28px;
+  line-height: 28px;
+}
+.pd_product-num-form[type="number"], .pd_product-num-select {
+  -webkit-appearance: none;
+  display: block;
+  width: 32px;
+  height: 30px;
+  line-height: 28px;
+  border: 1px solid #ddd;
+  -webkit-border-radius: 0;
+  border-radius: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  text-align: center;
+  font-size: 1.7rem;
+  color: #333;
+}
+.pd_product-num-plus {
+  border: 1px solid #ddd;
+  border-left: none;
+  -webkit-border-radius: 0 5px 5px 0;
+  border-radius: 0 5px 5px 0;
+}
+.pd_add-cart, .pd_buy-now, .pd_buy-disable {
+  display: block;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  height: 34px;
+  line-height: 32px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin-left: 5px;
+  border: 1px solid #e63636;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  color: #fff;
+  background-color: #ff3c3c;
+  font-size: 1.4rem;
+  text-align: center;
+}
+
+.pd_product-buy-num .pd_shop-cart {
+  position: relative;
+  display: block;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  margin-left: 10px;
+  text-align: center;
+  color: #7e7e7e;
+  font-size: 2.4rem;
+}
+.fade-panel {
+  width: 100%; height: 100%;
+  position: fixed; top: 0; left: 0; z-index: 999;
+  opacity: 0.8;
+  background-color: rgb(0, 0, 0);
+  display:none;
+}
